Closed Bug 650508 Opened 15 years ago Closed 14 years ago

[Windows] mochitest and reftest suites report "leaked 1 instance of Mutex with size 12 bytes" now

Categories

(MailNews Core :: Address Book, defect)

x86
Windows Server 2003
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 7.0

People

(Reporter: sgautherie, Unassigned)

References

(Blocks 1 open bug, )

Details

(Keywords: memory-leak, regression, Whiteboard: [perma-orange])

Attachments

(1 file)

(In reply to comment #0) > http://hg.mozilla.org/comm-central/pushloghtml?fromchange=a51304869f50&tochange=283cf841daac That could likely be bug 647000 and/or bug 647003. Ah, very likely bug 647000 comment 36... { /mailnews/addrbook/src/nsAbWinHelper.h * line 45 -- #include "mozilla/Mutex.h" * line 133 -- static mozilla::Mutex mMutex ; } Fwiw, this bug doesn't seem to affect SeaMonkey 2.1. I'm not sure why.
Component: Testing Infrastructure → Backend
Product: SeaMonkey → MailNews Core
QA Contact: testing-infrastructure → backend
Summary: [Windows] mochitest and reftest suites report "leaked 1 instance of Mutex with size 12 bytes" now → [Windows, SeaMonkey 2.2] mochitest and reftest suites report "leaked 1 instance of Mutex with size 12 bytes" now
Blocks: 647000, 647003
Looks like this is also happening on mozilla-central. s: talos-r3-xp-045 TEST-UNEXPECTED-FAIL | automationutils.processLeakLog() | leaked 12 bytes during test execution TEST-UNEXPECTED-FAIL | automationutils.processLeakLog() | leaked 1 instance of Mutex with size 12 bytes
Summary: [Windows, SeaMonkey 2.2] mochitest and reftest suites report "leaked 1 instance of Mutex with size 12 bytes" now → [Windows] mochitest and reftest suites report "leaked 1 instance of Mutex with size 12 bytes" now
(In reply to comment #2) (In reply to comment #3) 'regressionwindow-wanted' for that Firefox leak. Firefox isn't building MailNews. Did you actually mean that there is an underlying Core bug?
I'd like to see this fixed to clean up our leak logs, so I more easily tell that I'm not adding leaks.
Assignee: nobody → dbienvenu
Filed bug 668086 for the random case on mozilla-central
Attached patch fix mutex leakSplinter Review
this gets rid of the static Mutex in favor of using an nsAutoPtr to an allocated Mutex that's freed when our use count goes to zero. This does fix the test leak, and I believe it should work fine when the abWinHelper code is actually used, but I need to verify that.
Comment on attachment 542897 [details] [diff] [review] fix mutex leak fallout from the recent mutex changes - this removes the alleged leak from our leakstats.
Attachment #542897 - Flags: review?(neil)
Attachment #542897 - Flags: review?(neil) → review+
Assignee: dbienvenu → nobody
Status: NEW → RESOLVED
Closed: 14 years ago
Component: Backend → Address Book
QA Contact: backend → address-book
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 7.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: