fix Mutex reported memory leak in unit tests, r=neil, bug 650508